--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.13"
-shakmaty = "0.26"
-rand = "0.8"
-futures-lite = "1.13" 
+bevy = "0.12"
+shakmaty = "0.26.0"
+rand = "0.8.5"
+futures-lite = "1.13"
+arrayvec = "0.7.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0" 
