--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ rand = "0.8.5"
 futures-lite = "1.13"
 arrayvec = "0.7.4"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0" 
+serde_json = "1.0"
+pleco = "0.5.0" 
